<resources tools:ignore="MissingTranslation" android:locale="languageCode" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <string name="refresh_header_pulling">下拉可以刷新</string>
    <string name="refresh_header_refreshing">正在刷新</string>
    <string name="refresh_header_loading">正在加载</string>
    <string name="refresh_header_release">释放立即刷新</string>
    <string name="refresh_header_finish">刷新完成</string>
    <string name="refresh_header_failed">刷新失败</string>
    <string name="refresh_header_update">上次更新 M-d HH:mm</string>
    <string name="refresh_footer_pulling">加载更多</string>
    <string name="refresh_footer_release">释放立即加载</string>
    <string name="refresh_footer_loading">正在加载</string>
    <string name="refresh_footer_refreshing">正在刷新</string>
    <string name="refresh_footer_finish">加载完成</string>
    <string name="refresh_footer_failed">加载失败</string>
    <string name="refresh_footer_nothing">没有更多数据了</string>
    <string name="black">拉黑</string>
    <string name="black_ing">取消拉黑</string>
    <string name="cash_input_wx_account">请输入微信账号</string>
    <string name="cash_input_ali_account">请输入支付宝账号</string>
    <string name="cash_input_ali_name">请输入支付宝账号姓名</string>
    <string name="cash_type_ali">支付宝</string>
    <string name="cash_type_wx">微信</string>
    <string name="cash_type_bank">银行卡</string>
    <string name="cash_delete">是否要删除该账户？</string>
    <string name="cash_record">提现记录</string>
    <string name="coin_give">赠送</string>
    <string name="coin_balance">账户余额</string>
    <string name="coin_balance_2">余额：</string>
    <string name="coin_pay_ali">支付宝</string>
    <string name="coin_pay_wx">微信支付</string>
    <string name="coin_charge_success">充值成功</string>
    <string name="coin_charge_failed">充值失败</string>
    <string name="coin_ali_not_install">未安装支付宝</string>
    <string name="coin_wx_not_install">未安装微信</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_success">复制成功</string>
    <string name="home_page">首页</string>
    <string name="home_page_share_1">"%1$s"也在%2$s，~点击查看TA的故事</string>
    <string name="home_page_share_2">TA有%1$s粉丝，快来围观呀！</string>
    <string name="im_live_anchor_msg">Hi~我是主播，快来和我聊天吧。</string>
    <string name="im_type_image">[图片]</string>
    <string name="im_type_voide">[语音]</string>
    <string name="im_type_location">[位置]</string>
    <string name="live_shop_open">开启购物车</string>
    <string name="live_shop_close">关闭购物车</string>
    <string name="goods_add_taobao">淘宝商品</string>
    <string name="goods_add_xcx">商城小程序</string>
    <string name="goods_tip_1">商品链接(可粘贴淘宝店铺商品链接)</string>
    <string name="goods_tip_2">商品名称(最多可输入20个字)</string>
    <string name="goods_tip_3">原价</string>
    <string name="goods_tip_4">现价</string>
    <string name="goods_tip_5">确认添加商品</string>
    <string name="goods_tip_6">商品简介(最多可输入50个字)</string>
    <string name="goods_tip_7">商品图片</string>
    <string name="goods_tip_8">查看次数：%1$s次</string>
    <string name="goods_tip_9">(输入小程序中商品对应ID，将自动获取商品信息)</string>
    <string name="goods_tip_10">商品名称</string>
    <string name="goods_tip_11">商品简介</string>
    <string name="goods_tip_12">商品ID</string>
    <string name="goods_tip_13">获取商品信息</string>
    <string name="goods_tip_14">查看同款商品</string>
    <string name="goods_tip_16">广告链接无效</string>
    <string name="goods_tip_17">在售商品</string>
    <string name="goods_tip_18">去购买</string>
    <string name="goods_tip_19">当前暂无在售商品</string>
    <string name="goods_tip_20">全部商品 </string>
    <string name="goods_tip_21">添加商品</string>
    <string name="goods_tip_22">移除</string>
    <string name="goods_tip_23">当前暂无在售商品\n点击右上角添加商品到购物车</string>
    <string name="goods_tip_24">请输入商品名称</string>
    <string name="goods_tip_25">您的店铺内暂无商品\n请先前往店铺内添加商品</string>
    <string name="goods_tip_26">在售商品 </string>
    <string name="goods_tip_27">进店逛逛</string>
    <string name="goods_tip_28">推荐商品</string>
    <string name="goods_tip_29">去购买</string>
    <string name="goods_tip_30">下架</string>
    <string name="goods_tip_31">关联商品</string>
    <string name="goods_tip_32">查看同款商品</string>
    <string name="goods_tip_33">重新上架</string>
    <string name="goods_tip_34"> 删除后店铺内将不再显示此款商品\n确定要删除此款商品吗？</string>
    <string name="goods_tip_35"> 下架后用户将无法购买此款商品\n确定要下架此款商品吗？</string>
    <string name="goods_tip_36">请输入商品id</string>
    <string name="goods_tip_37">管理下架</string>
    <string name="goods_tip_38">已下架</string>
    <string name="goods_tip_39">在售商品 (%1$s)</string>
    <string name="goods_un_saled">下架商品</string>
    <string name="live_send_gift">礼物</string>
    <string name="live_send_gift_4">背包</string>
    <string name="live_send_gift_5">道具</string>
    <string name="live_send_gift_1">送</string>
    <string name="live_send_gift_2">个</string>
    <string name="live_send_gift_3">送了一个</string>
    <string name="live_gift_send">赠送</string>
    <string name="live_gift_send_lian">连送</string>
    <string name="live_gift_send_lian_2">x</string>
    <string name="live_gift_send_lian_3">连送 x</string>
    <string name="im_input_gift">礼物</string>
    <string name="im_input_location">位置</string>
    <string name="im_choose_image">选择图片</string>
    <string name="im_no_image">没有找到图片</string>
    <string name="im_please_choose_image">请选择图片</string>
    <string name="im_search_location">搜索地点</string>
    <string name="im_location_failed">未获取到位置信息</string>
    <string name="im_map_not_loaded">地图未加载</string>
    <string name="im_address_failed">未获取到地址</string>
    <string name="im_get_location_failed">获取位置失败</string>
    <string name="im_follow_tip">点击关注，可及时看到对方动态</string>
    <string name="im_press_say">按住 说话</string>
    <string name="im_unpress_stop">松开 结束</string>
    <string name="im_please_say">请说话...</string>
    <string name="im_record_audio_too_short">录音时间太短</string>
    <string name="im_no_sys_msg">暂无系统消息</string>
    <string name="im_pri_chat">私聊</string>
    <string name="im_charge_send">付费发送</string>
    <string name="img_camera_cancel">取消拍照</string>
    <string name="img_alumb_cancel">取消选择</string>
    <string name="img_crop_cancel">取消裁剪</string>
    <string name="live_share_to">分享至</string>
    <string name="main_home">首页</string>
    <string name="project_center">我的课程</string>
    <string name="main_me">个人中心</string>
    <string name="main_maintain_notice">维护通知</string>
    <string name="main_input_invatation_code">请填写邀请码</string>
    <string name="main_click_next_exit">再按一次退出</string>
    <string name="mob_phone">手机</string>
    <string name="mob_qq">QQ</string>
    <string name="mob_qzone">QQ空间</string>
    <string name="mob_wx">微信</string>
    <string name="mob_wx_pyq">朋友圈</string>
    <string name="mob_fb">Facebook</string>
    <string name="mob_tt">推特</string>
    <string name="permission_storage_refused">您拒绝了文件读写的权限，请到设置中修改</string>
    <string name="permission_camera_refused">您拒绝了使用摄像头的权限，请到设置中修改</string>
    <string name="permission_record_audio_refused">您拒绝了使用麦克风的权限，请到设置中修改</string>
    <string name="permission_location_refused">您拒绝了使用定位的权限，请到设置中修改</string>
    <string name="permission_read_phone_state_refused">您拒绝了读取手机信息的权限，请到设置中修改</string>
    <string name="profit">我的收益</string>
    <string name="setting">设置</string>
    <string name="setting_exit">退出账号</string>
    <string name="setting_clear_cache_ing">清除中</string>
    <string name="setting_clear_cache">成功缓存清除</string>
    <string name="setting_clear_cache_2">缓存清除</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入要搜索的昵称或ID</string>
    <string name="search_no_data">未找到相关内容</string>
    <string name="share_type_qq">QQ</string>
    <string name="share_type_qzone">QQ空间</string>
    <string name="share_type_wx">微信</string>
    <string name="share_type_wxpyq">朋友圈</string>
    <string name="share_type_facebook">facebook</string>
    <string name="share_type_twitter">twitter</string>
    <string name="share_success">分享成功</string>
    <string name="share_failed">分享失败</string>
    <string name="share_cancel">分享取消</string>
    <string name="version_update">版本更新</string>
    <string name="version_immediate_use">立即使用</string>
    <string name="version_not_update">暂不更新</string>
    <string name="version_latest">已经是最新版本</string>
    <string name="version_download_url_error">下载地址无效</string>
    <string name="add">添加</string>
    <string name="accept">接受</string>
    <string name="all">全部</string>
    <string name="alumb">相册</string>
    <string name="cancel">取消</string>
    <string name="camera">相机</string>
    <string name="confirm">确定</string>
    <string name="content_empty">请输入消息～</string>
    <string name="choose">请选择</string>
    <string name="choose_flie">选择文件</string>
    <string name="cannot_follow_self">无法关注自己哦~</string>
    <string name="dialog_tip">提示</string>
    <string name="download">下载</string>
    <string name="downloaded">已下载</string>
    <string name="delete">删除</string>
    <string name="end">结束</string>
    <string name="hot">热门</string>
    <string name="load_failure">网络请求失败</string>
    <string name="net_work_broken">网络连接断开</string>
    <string name="load_failure_2">请检查网络连接后重试~</string>
    <string name="loading">加载中</string>
    <string name="location">位置</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="no_data">空空如也</string>
    <string name="near">附近</string>
    <string name="num_wan">万</string>
    <string name="please_wait">请稍等</string>
    <string name="pri_msg">私信</string>
    <string name="reload">重试</string>
    <string name="refuse">拒绝</string>
    <string name="save">保存</string>
    <string name="send">发送</string>
    <string name="count">数量</string>
    <string name="im_clear_chat_record">清除聊天记录</string>
    <string name="im_forward_ta_home">查看TA的主页</string>
    <string name="recommend">推荐</string>
    <string name="charge">充值</string>
    <string name="wallet_coin_name">我的%1$s</string>
    <string name="wallet_tip_1">请选择支付方式</string>
    <string name="wallet_tip_3">已阅读并同意</string>
    <string name="wallet_tip_4">请选择充值金额</string>
    <string name="wallet_tip_5">未选中支付方式</string>
    <string name="wallet_tip_6">未选择充值金额</string>
    <string name="main_price_tip_2">收费标准说明</string>
    <string name="search_id">ID：</string>
    <string name="chat_coin_not_enough">余额不足</string>
    <string name="chat_charge_pay_type">支付方式</string>
    <string name="chat_charge_pay">立即支付</string>
    <string name="login_status_Invalid">登录状态失效！</string>
    <string name="open_vip">开通会员</string>
    <string name="vip">会员</string>
    <string name="vip_tip_1">您还不是VIP会员</string>
    <string name="vip_tip_2">无法享受会员特权</string>
    <string name="vip_tip_3">会员特权列表</string>
    <string name="vip_tip_4">开通VIP</string>
    <string name="vip_tip_5">续费VIP</string>
    <string name="vip_tip_6">您已开通VIP会员</string>
    <string name="vip_tip_7">会员到期时间：%1$s</string>
    <string name="vip_center">会员中心</string>
    <string name="vip_item_0_1">专属会员标识</string>
    <string name="vip_item_0_2">会员头像标识，彰显尊贵身份</string>
    <string name="vip_item_1_1">免费无限私信</string>
    <string name="vip_item_1_2">私信无限制，聊天更随意</string>
    <string name="vip_item_2_1">匹配约聊优惠</string>
    <string name="vip_item_2_2">匹配有优惠，主播来排队</string>
    <string name="vip_item_3_1">私密视频免费</string>
    <string name="vip_item_3_2">私密视频免费观看，让TA对你无秘密</string>
    <string name="vip_item_4_1">私密照片免费</string>
    <string name="vip_item_4_2">私密照片免费观看，让TA对你无秘密</string>
    <string name="vip_tip_8">开通会员</string>
    <string name="vip_tip_9">立即开通</string>
    <string name="vip_tip_10">金额:&#160;</string>
    <string name="vip_tip_11">购买%1$s会员</string>
    <string name="agent_tip">输入邀请码</string>
    <string name="setting_about_us">联系我们</string>
    <string name="set_sex_tip">请选择性别，选择后无法修改</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="order_submit">提交订单</string>
    <string name="order_detail_skill">品类</string>
    <string name="time">时间</string>
    <string name="cost">费用</string>
</resources>