<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#eeeeee"
        >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/cancel"
            android:textColor="@color/gray1"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="center"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/confirm"
            android:textColor="@color/global"
            android:textSize="13sp"
            />


    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/set_sex_tip"
        android:textColor="@color/gray1"
        android:textSize="12sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray6"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        >

        <RadioButton
            android:id="@+id/btn_male"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/sex_male"
            android:textColor="@color/fg_btn_set_sex"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray6"
            />

        <RadioButton
            android:id="@+id/btn_female"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:button="@null"
            android:gravity="center"
            android:text="@string/sex_female"
            android:textColor="@color/fg_btn_set_sex"
            />

    </RadioGroup>

</LinearLayout>