<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/load_failure"
    android:translationY="-60dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:visibility="invisible"
    android:layout_gravity="center"
    >
    <ImageView
        android:layout_width="120dp"
        android:layout_height="74dp"
        android:scaleType="fitXY"
        android:src="@mipmap/bg_load_failure"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/load_failure"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_14"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_failure_2"
        android:textColor="@color/gray1"
        android:textSize="14sp"
        />

    <TextView
        android:id="@+id/btn_reload"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_reload"
        android:gravity="center"
        android:text="@string/reload"
        android:textColor="@color/white"
        android:textSize="14sp"
        />


</LinearLayout>



