<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="280dp"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_dialog"
              android:gravity="center_horizontal"
              android:orientation="vertical"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_tip"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_15"
        android:gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_dialog_input"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_14"
        />

    <View
        style="@style/line2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">


        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/gray1"
            android:textSize="@dimen/text_size_13"
            />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/gray6"
            />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/global"
            android:textSize="@dimen/text_size_13"
            />

    </LinearLayout>
</LinearLayout>